Add content to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <hi>Elijah's To do list</hi>
+
+Work on the character and backgrounds
+Work on character design
+Think of Character interaction
+Create storyline
