Add content to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Elijah's To-do List</title>
+    </head>
+
+ <body>
 <hi>Elijah's To do list</hi>
 
-Work on the character and backgrounds
-Work on character design
-Think of Character interaction
-Create storyline
+ <ul>
+ <li>Work on the character and backgrounds</li>
+ <li>Work on character design</li>
+ <li>Think of Character interaction</li>
+ <li>Create storyline</li>
+  </ul>
+ </body>
+</html>
