Add content to index.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 <hi>Elijah's To do list</hi>
 
  <ul>
- <li>Work on the character and backgrounds</li>
- <li>Work on character design</li>
- <li>Think of Character interaction</li>
- <li>Create storyline</li>
+ <li>
+    <input type="checkbox">
+     Work on the character and backgrounds
+     </li>
+ <li>
+     <input type="checkbox">
+     Work on character design
+     </li>
+ <li>
+     <input type="checkbox">
+     Think of Character interaction
+ </li>
+ <li>
+     <input type="checkbox">
+     Create storyline
+ </li>
   </ul>
  </body>
 </html>
