Add content to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <ul>
  <li>
     <input type="checkbox">
-     Work on the character and backgrounds
+     <a href="/show.html">Work on the characters and backgrounds</a>
      </li>
  <li>
      <input type="checkbox">
