--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Elijah's To-do List</title>
+        <link rel="stylesheet" href="index.css" type="text/css" />
     </head>
 
  <body>
